Fixed css on iPhone 12

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -198,7 +198,7 @@
         margin-right: 6vw;
     }
     .ContactButtonDiv {
-        padding-left: 3vw;
+        padding-left: 6vw;
     }
     .ContactButton {
         height: 7vh;
